# laboratory

./: README.md  print.go
CaptureData/: CaptureDataApi.cpp  CaptureDataApi.h  CaptureDataController.h  CaptureDataController.mm  CaptureManager.h  CaptureManager.mm
PtHttpLib/: CMakeLists.txt  HttpClientDef.cpp  auto.sh  main.cpp
PtHttpLib/include/: HttpClientDef.h  asynchttpclient.h
Todo/: Todo
bash/: bash  mysystem.sh
c++/: chains.cpp  constructor.cpp  exe  staticUsage.cpp  test.cpp
cmake/: CMakeLists.txt  generate.sh
docs/: intro
experiment/: CMakeLists.txt  test.cpp
go/: client  client.go  print  print.go  server  server.go
go/client/: client  client.go
go/server/: server  server.go
goCodes/: print.go
iospacking/: VERSION
iospacking/_scripts/: add_version.py  build.py  build_config.json  plz_run_me_first.py  release_config.json  sub_version.py  upload_version.py
iospacking/_scripts/libs/: register.py
lua/: image.lua  test.lua
lua/lunadry-master/: athen.lua  formatter.lua  functions.lua  lunadry  lunadry.lua  metatable.lua  test.lua  test1.lua
lua/lunadry-master/testdir/: test1.lua
manDb/: curl
manuals/: binary.txt
migu/: 代领委托授权书.docx
opencv/: CMakeLists.txt  Smoothing.cpp
opencv/opencvTests/: IdentifyEdge.cpp  IdentifyEdge.hpp  MorphoTrans.cpp  MorphoTrans.hpp  PointPolygonTest.cpp  PointPolygonTest.hpp  ShapeCheck.cpp  ShapeCheck.hpp  Smoothing.cpp
proxyTest/: address  debug.txt  deubg.txt  google.html
python/: .ftpsync.clocksync  encoding.py  ftpFunc.py  ftpFunc2.py  ftpsync.py  gencsv.py  gk2_1.xml  guankas.csv  pythonTest.py  shadowsocks.py  uploadToAthenFtp  xlsx2xml.py  xlsx2xml_music.py
python/config/double/: gk10_1.xml  gk10_2.xml  gk11_1.xml  gk11_2.xml  gk12_1.xml  gk12_2.xml  gk12_3.xml  gk1_1.xml  gk1_3.xml  gk2_1.xml  gk2_2.xml  gk3_1.xml  gk3_3.xml  gk4_1.xml  gk4_3.xml  gk5_1.xml  gk5_3.xml  gk6_1.xml  gk6_2.xml  gk7_1.xml  gk7_2.xml  gk8_1.xml  gk8_2.xml  gk8_3.xml  gk9_1.xml  gk9_2.xml  匈牙利圆舞曲1.xlsx  匈牙利圆舞曲2.xlsx  匈牙利圆舞曲3.xlsx  卡门1.xlsx  卡门2.xlsx  卡门3.xlsx  印度风情1.xlsx  印度风情2.xlsx  印度风情3.xlsx  命运交响曲1.xlsx  命运交响曲2.xlsx  命运交响曲3.xlsx  土耳其进行曲1.xlsx  土耳其进行曲2.xlsx  (+22 more)
python/config/item/: propsDef - 副本.lua  propsDef.lua
python/config/single/: gk10_1.xml  gk11_1.xml  gk11_2.xml  gk11_3.xml  gk2_2.xml  gk2_3.xml  (+51 more)
python/dictionary/: lookUpDicClient.py  lookUpDicServer.py  lookUpDic_client.py  releaseClient.sh
python/hotUpdate/: SimpleUploadClient.py  connectFtp.py  localManifest.py  patching.py  uploadToFtp.py
python/pngCollect/: ftpTest.py  grabscreen.py  sh_server.py  watchScreen-ing.py
python/pngMonitor/: downloading-pngs.py  ftpTest.py  nohup.out  sh_server.py  watchScreen-ing.py
python/project/: xlsx2xml.py  xlsx2xml_music.py
python/proxyServers/: httpProxyServer.py
python/utils/: md5.py  readConfig.py
shell/: awk.intro  mysystem.sh  script.sh  set.sh
shells/: c_file.sh  regex  scp.sh
shells/athenVps/: autoLogin.sh  connect.sh  test.sh  uploadToAthen.sh
shells/workoff/: macAuto.sh
ss.conf-for-surge/: ServerConfig.txt  ServerConfig1.txt  ssconf.py
ss.conf-for-surge/configFileHere/: gfwlist.conf  gfwlist1.conf  gfwlist2.conf  whitelist.conf
ss.conf-for-surge/list/: adlist.txt  gfwlist.txt  whitelist.txt
(+10 files in other folders)
